# polyglot-ui

./: .gitignore  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml
polyglot_ui/: __init__.py  cli.py  compile.py  helptexts.py  html.py  modules.py  translate.py  update.py
